# anonymize-data

./: CHANGELOG.md  GEMINI.md  README.md  mkdocs.yml  pyproject.toml
.gemini/: gemini_history.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: contributing.md  index.md  tutorials.md
docs/api/: anonymizer.md  core.md  handlers.md  utils.md
docs/templates/: table_type_mask.html
src/anonymizer/: __init__.py  anonymizer.py  cli.py  exceptions.py  handlers_anonymize.py  mask_dispatch.py  mask_settings.py  string_mask.py  utils.py
src/anonymizer_data/: __init__.py  cli.py
src/anonymizer_data/core/: __init__.py  anonymizer_data.py  base.py  config.py  dict.py  dict_strategy.py  dispatcher.py  list.py  string.py
src/anonymizer_data/handlers/: __init__.py  dispatch.py  functions.py
tests/: fix_tests.py  payloads.py  test_anonymize_cep.py  test_anonymize_cnpj.py  test_anonymize_email.py  test_anonymize_numeric_digits.py  test_anonymize_phone_number.py  test_anonymize_pis.py  test_anonymize_rg.py  test_anonymize_substring.py  test_anonymizer.py  test_base_masker.py  test_cli_anonymize.py  test_dict_strategy.py  test_handler_anonymize_string.py  test_handler_anonymize_type_cpf.py  test_mask_dict.py  test_mask_dispatch.py  test_mask_list.py  test_mask_string.py  test_mask_string_part.py  test_masker.py  test_masker_string.py
