[project]
name = "anonymizer"
version = "0.1.0"
authors = [
    { name="Jhonatan Rian", email="jhonatanrian0543@outlook.com" },
]
description = "A tool to censor sensitive data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=30.4.0",
    "validate-docbr>=1.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
]
