[project]
name = "anonymizer"
version = "0.1.0"
authors = [
    { name="Jhonatan Rian", email="jhonatanrian0543@outlook.com" },
]
description = "A tool to censor sensitive data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "validate-docbr>=1.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "coverage>=7.6.3",
    "faker>=30.6.0",
]
