[project]
name = "anonymizer"
version = "0.1.0"
authors = [
    { name="Jhonatan Rian", email="jhonatanrian@zohomail.com" },
]
description = "A tool to censor sensitive data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "validate-docbr>=1.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "coverage>=7.6.3",
    "faker>=30.6.0",
    "mkdocs-material>=9.5.41",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.12.1",
    "mkdocstrings>=0.26.2",
]

[tool.black]
line-length = 88
